Add navigation links

--- a/blue.html
+++ b/blue.html
@@ -10,5 +10,6 @@
 <body>
 	<h1 class="blue">The Blue Page</h1>
 	<p>Blue is the color for <span class="blue">peace</span></p>
+	<p><a href="index.html">Return to home page</a></p>
 </body>
 </html>
